# diff-viewer

./: CMakeLists.txt  README.md  index.html
.github/workflows/: cpp-unit-tests.yml  deploy-pages.yml
assets/: DiffViewWASM-BBlGUZMF.wasm  DiffViewWASM-DGul5TcA.wasm  DiffViewWASM-USCNajdT.wasm  index-BNU2bVnw.js  index-CHSLseye.css  index-COApzgm6.js  index-CbAVUnVv.css  index-CcG4-isO.css  index-ChWfs14Z.js  index-Czciia_y.js  index-DB5O6JpY.js  index-Q_VThNya.css  index-Vvhy1Kik.js  index-sQDVNOyt.js
include/: diff.h  string_utils.h  view_model.h
src/: diff.cpp  string_utils.cpp  view_model.cpp
tests/: test_diff_chars.cpp  test_diff_lines.cpp  test_string_utils.cpp  test_view_model.cpp
wasm/: binding.cpp  build.sh  index.d.ts  index.js  package-lock.json  package.json
wasm/test/: index.test.js
web/: index.html  main.ts  package-lock.json  package.json  style.css  vite.config.ts
web/src/: connector.ts  constants.ts  diff-editor.ts  editor.ts  file-handler.ts  main.ts  storage.ts  style.css  tabs.ts  types.ts  utils.ts
